--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ img {
   /* display: flex;
   align-items: center; */
 
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
 }
 .header {
   background-color: var(--main-bg-cl);
