--- a/css/styles.css
+++ b/css/styles.css
@@ -64,9 +64,12 @@ img {
 .header-list {
   display: flex;
   align-items: center;
-  gap: 50px;
   padding-top: 32px;
   padding-bottom: 32px;
+}
+.header-item:not(:last-child) {
+  width: calc((100% - 100px) / 3);
+  margin-right: 50px;
 }
 .contact-list {
   display: flex;
@@ -179,17 +182,21 @@ h1 {
   border: 0;
 }
 
-/* advantages-section */
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+/* advantages-section */
+
 .visually-hidden {
   display: none;
 }
 .advantages-list {
   display: flex;
-  gap: 30px;
+}
+.advantages-item:not(:last-child) {
+  width: calc((100% - 90px) / 4);
+  margin-right: 30px;
 }
 .advantages-text {
   width: 270px;
@@ -218,17 +225,19 @@ h3 {
 .activity-section {
   padding-top: 0;
 }
-.activity-section-title {
+.activity-title {
   margin-bottom: 50px;
   text-align: center;
 }
 .activity-list {
   display: flex;
-  gap: 30px;
 }
-.advant-text {
-  width: 270px;
+.activity-item:not(:last-child) {
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
 }
+
+/* team-section */
 p {
   font-size: 14px;
   line-height: calc(24 / 14);
@@ -239,7 +248,10 @@ p {
 }
 .team-list {
   display: flex;
-  gap: 30px;
+}
+.team-item:not(:last-child) {
+  width: calc((100% - 90px) / 4);
+  margin-right: 30px;
 }
 .teem-group {
   text-align: center;
@@ -272,7 +284,7 @@ p {
 .footer-contact-list {
   margin-top: 20px;
 }
-.contact-item:not(:last-child) {
+.footer-contact-item:not(:last-child) {
   margin-bottom: 9px;
 }
 .footer-adress {
@@ -304,7 +316,10 @@ p {
 }
 
 /* portfolio */
-
+.project-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .project-button {
   display: flex;
   gap: 8px;
@@ -332,7 +347,17 @@ button:focus {
 .project-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
+}
+.project-item {
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.project-item:nth-child(3n) {
+  margin-right: 0;
+}
+.project-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 .project-group {
   padding: 20px 24px;
